# TinyCrypto

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arm-toolchain.cmake  check_mul.txt  dashboard.py  dashboard_preview.html  dashboard_tinycrypto.py  dashboard_traditional.py  debug_fe.cpp  debug_ladder.py  linker.ld  paper.txt  poster.txt  results.txt  run_qemu.bat
benchmarks/: bench_aes256.cpp  bench_chacha20.cpp  bench_curve25519.cpp  bench_secure.cpp  bench_sha256.cpp
build_arm_new/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeDoxygenDefaults.cmake  aeabi_calls.txt  build.ninja  cmake_install.cmake  fe_dump.txt  firmware.uf2  firmware_dump.txt  lmul_callers.txt  mul32_acc_body.txt  mul32_acc_dump.txt  objdump_search.txt  sections.txt
build_arm_new/pico-sdk/: cmake_install.cmake
build_arm_new/pico-sdk/docs/: cmake_install.cmake
build_arm_new/pico-sdk/src/: cmake_install.cmake
build_arm_new/pico-sdk/tools/: cmake_install.cmake
build_arm_new/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
build_arm_new/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
build_host/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test_aes256.vcxproj.filters  test_chacha20.vcxproj.filters  test_curve25519.vcxproj.filters  test_hmac.vcxproj.filters  test_secure.vcxproj.filters  test_sha256.vcxproj.filters
build_host/Testing/Temporary/: CTestCostData.txt
build_host/lib/Debug/: gtest_main.lib
build_host/lib/Release/: gtest_main.lib
build_host/test_aes256.dir/Debug/: test_aes256.exe.recipe
build_host/test_aes256.dir/Debug/test_aes256.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_aes256.lastbuildstate
build_host/test_chacha20.dir/Debug/: test_chacha20.exe.recipe
build_host/test_chacha20.dir/Debug/test_chacha20.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_host/test_curve25519.dir/Debug/: test_curve25519.exe.recipe
build_host/test_curve25519.dir/Debug/test_curve25519.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_host/test_curve25519.dir/Release/: test_curve25519.exe.recipe
build_host/test_curve25519.dir/Release/test_curve25519.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  (+1 more)
build_host/test_hmac.dir/Debug/: test_hmac.exe.recipe
build_host/test_secure.dir/Debug/: test_secure.exe.recipe
build_host/test_sha256.dir/Debug/: test_sha256.exe.recipe
build_picotool/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  data_locs.cpp  embedded_data.vcxproj.filters  embedded_data_no_libusb.vcxproj.filters  enc_bootloader.vcxproj.filters  enc_bootloader_elf.h  enc_bootloader_mbedtls.vcxproj.filters  enc_bootloader_mbedtls_elf.h  picotool.vcxproj.filters  picotoolConfigVersion.cmake
build_picotool/bintool/: INSTALL.vcxproj.filters  bintool.vcxproj.filters  cmake_install.cmake
build_picotool/bintool/Release/: bintool.lib
build_picotool/boot_bootrom_headers/: INSTALL.vcxproj.filters  cmake_install.cmake
build_picotool/boot_picobin_headers/: INSTALL.vcxproj.filters  cmake_install.cmake
build_picotool/boot_picoboot_headers/: INSTALL.vcxproj.filters  cmake_install.cmake
build_picotool/boot_uf2_headers/: INSTALL.vcxproj.filters  cmake_install.cmake
build_picotool/elf/: INSTALL.vcxproj.filters  cmake_install.cmake  elf.vcxproj.filters
build_picotool/elf/Release/: elf.lib
build_picotool/elf2uf2/: INSTALL.vcxproj.filters  cmake_install.cmake  elf2uf2.vcxproj.filters
build_picotool/elf2uf2/Release/: elf2uf2.lib
build_picotool/enc_bootloader/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_picotool/enc_bootloader/tmp/: enc_bootloader-cfgcmd.txt  enc_bootloader-mkdirs.cmake
build_picotool/enc_bootloader_mbedtls/: CMakeCache.txt  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_picotool/enc_bootloader_mbedtls/tmp/: enc_bootloader_mbedtls-cfgcmd.txt  enc_bootloader_mbedtls-mkdirs.cmake
build_picotool/errors/: INSTALL.vcxproj.filters  cmake_install.cmake  errors.vcxproj.filters
build_picotool/errors/Release/: errors.lib
build_picotool/lib/: INSTALL.vcxproj.filters  cmake_install.cmake  mbedtls.vcxproj.filters
build_picotool/lib/Release/: mbedtls.lib
build_picotool/lib/littlefs/: INSTALL.vcxproj.filters  cmake_install.cmake
build_picotool/lib/nlohmann_json/: ALL_BUILD.vcxproj.filters  INSTALL.vcxproj.filters  cmake_install.cmake
build_picotool/lib/oofatfs/: INSTALL.vcxproj.filters  cmake_install.cmake
build_picotool/lib/whereami/: INSTALL.vcxproj.filters  cmake_install.cmake
build_picotool/model/: INSTALL.vcxproj.filters  cmake_install.cmake  model.vcxproj.filters  unreadable_rom_data.vcxproj.filters
build_picotool/model/Release/: model.lib
build_picotool/pico_binary_info/: INSTALL.vcxproj.filters  cmake_install.cmake
build_picotool/pico_platform/: INSTALL.vcxproj.filters  cmake_install.cmake
build_picotool/pico_usb_reset_interface_headers/: INSTALL.vcxproj.filters  cmake_install.cmake
build_picotool/picoboot_connection/: INSTALL.vcxproj.filters  cmake_install.cmake
build_picotool/picotool.dir/Release/: picotool.exe.recipe
include/: aes256.hpp  bigint.hpp  chacha20.hpp  crypto_primitives.hpp  curve25519.hpp  hmac.hpp  sha256.hpp  utils.hpp
paper/: tinycrypto_paper.tex
src/: aes256.cpp  bigint.cpp  chacha20.cpp  curve25519.cpp  fe.cpp  hmac.cpp  main.cpp  sha256.cpp  utils.cpp
tests/: test_aes256.cpp  test_chacha20.cpp  test_curve25519.cpp  test_hmac.cpp  test_secure.cpp  test_sha256.cpp
(+252 files in other folders)
